--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,3 +13,27 @@
   height: auto;
   margin-bottom: 8rem;
 }
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  padding: 4rem 0 4rem 0;
+}
+
+.icon_container {
+  display: flex;
+  gap: 1.8rem;
+}
+
+.icon {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
