--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,14 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: var(--color-midnight-blue);
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 a {
