--- a/src/components/Article/article.module.css
+++ b/src/components/Article/article.module.css
@@ -8,6 +8,14 @@
   background-color: var(--color-lime-green);
 }
 
+.read_article_button:hover {
+  background-color: var(--color-midnight-blue-darkest);
+}
+
+.read_article_button:hover a {
+  color: white;
+}
+
 .read_article_button a {
   color: #000000;
 }
@@ -16,6 +24,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  justify-content: flex-end;
   flex-shrink: 0;
   height: 20rem;
   width: 15rem;
@@ -23,6 +32,7 @@
   border-radius: 1rem;
   gap: 1rem;
   background-color: var(--color-midnight-blue);
+  transition: all 0.4s ease;
 }
 
 .article p:first-child {
