--- a/src/components/CollaboratorTile/collaboratorTile.module.css
+++ b/src/components/CollaboratorTile/collaboratorTile.module.css
@@ -1,13 +1,95 @@
 .collaborator_tile {
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: relative;
   flex-shrink: 0;
-  height: 12rem;
-  width: 10rem;
-  padding: 1rem;
+  height: 14rem;
+  width: 12rem;
   margin: 0rem 2rem 0 2rem;
   border-radius: 1rem;
-  gap: 1rem;
+  gap: 0.5rem;
   background-color: var(--color-midnight-blue);
+  padding: 0 1rem 0 1rem;
+}
+
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 6rem;
+  height: 6rem;
+  position: relative;
+  bottom: 3rem;
+  background-color: white;
+  border-radius: 3rem;
+}
+
+.icon_container {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.icon_container * {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
+.icon_container *:hover {
+  cursor: pointer;
+}
+
+.button {
+  position: relative;
+  bottom: 1.5rem;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 1.4rem;
+  border-radius: 1rem;
+  font-size: 0.6rem;
+  background-color: var(--color-lime-green);
+}
+
+.button:hover {
+  background-color: var(--color-midnight-blue-darkest);
+}
+
+.button a {
+  color: #000000;
+}
+
+.button:hover a {
+  cursor: pointer;
+  color: white;
+}
+
+.collaborator_tile .title {
+  font-size: 1rem;
+  position: relative;
+  bottom: 2.2rem;
+  flex-shrink: 0;
+}
+
+.collaborator_tile p {
+  display: -webkit-box;
+  text-transform: capitalize;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: 0.7rem;
+}
+
+.collaborator_tile .text_container {
+  position: relative;
+  bottom: 1.8rem;
 }
