--- a/src/components/Collaborators/collaborators.module.css
+++ b/src/components/Collaborators/collaborators.module.css
@@ -1,12 +1,12 @@
 .collaborators_container {
   width: 100%;
   height: auto;
-  padding: 4rem 4rem 4rem 4rem;
+  padding: 6rem 4rem 4rem 4rem;
   background-color: var(--color-midnight-blue-darker);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .collaborators_wrapper {
@@ -15,6 +15,7 @@
   justify-content: space-evenly;
   align-items: center;
   gap: 4rem;
+  margin-top: 3rem;
 }
 
 .collaborators_container p {
