--- a/src/app/mission/mission.module.css
+++ b/src/app/mission/mission.module.css
@@ -11,6 +11,7 @@
 }
 
 .main_paragraph {
+  font-size: 1rem;
   border-bottom: 0.5rem solid var(--color-lime-green);
 }
 
@@ -23,25 +24,54 @@
   background-color: var(--color-midnight-blue-darker);
 }
 
-.paragraph_wrapper {
+.main_paragraph_wrapper {
   width: 80%;
   max-width: 36rem;
+}
+
+.main_paragraph_wrapper p {
+  text-align: center;
+}
+
+.paragraph_wrapper {
+  width: 80%;
+  max-width: 42rem;
 }
 
 .paragraph_wrapper p {
   text-align: center;
 }
 
-.second_paragraph {
+.paragraph_wrapper_wide {
+  width: 80%;
+  max-width: 38rem;
+}
+
+.paragraph_wrapper_wide p {
+  text-align: center;
+}
+
+.paragraph {
   margin-top: 6rem;
 }
 
-.second_paragraph * {
-  font-size: 0.8rem;
+.paragraph * {
+  font-size: 0.9rem;
 }
 
 .flex_column {
   display: flex;
   flex-direction: column;
   gap: 4rem;
+}
+
+.cards_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  max-width: 50rem;
+  padding: 10rem 4rem 6rem 4rem;
+  gap: 2rem;
 }
