--- a/src/app/article/[name]/page.module.css
+++ b/src/app/article/[name]/page.module.css
@@ -1,4 +1,4 @@
-.article_container {
+/* .article_container {
   display: flex;
   align-self: center;
   justify-content: center;
@@ -9,29 +9,64 @@
 .article_wrapper {
   width: 80%;
   max-width: 75rem;
+} */
+
+.article_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article_wrapper {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  width: 80%;
+  max-width: 50rem;
+  gap: 2rem;
+  padding: 0rem 2rem 5rem 2rem;
 }
 
 .article_wrapper p {
-  margin: 1.5rem;
+  margin: 0.5rem;
 }
 
-.article_wrapper h1,
-.article_wrapper h2,
-.article_wrapper h3,
-.article_wrapper h4,
-.article_wrapper h5,
-.article_wrapper h6 {
-  margin: 2.5rem;
+.math {
+  padding: 0 0.5rem 0 0.5rem;
 }
 
 .article_wrapper ul {
-  margin: 2rem;
+  margin-left: 2rem;
 }
 
 .article_wrapper li {
   margin: 0.5rem;
 }
 
-.article_wrapper .tozp {
+.section_container {
+  width: 100%;
+  padding: 2rem 3rem 3rem 3rem;
+  background-color: var(--color-midnight-blue-darker);
+  font-size: 0.9rem;
+}
+
+.section_column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+
+.section_row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  width: 100%;
+  gap: 4rem;
+}
+
+.abc123 {
   color: red;
 }
