added pipeline route, article generator test with img

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
   --color-midnight-blue: #22294c;
   --color-midnight-blue-darker: #1b1f3b;
   --color-midnight-blue-darkest: #0f1429;
+  --color-light-blue-dimmed: #313a5b;
   --color-lime-green: #82ef53;
 }
 
