--- a/src/app/article/[name]/page.module.css
+++ b/src/app/article/[name]/page.module.css
@@ -27,9 +27,9 @@
   padding: 0rem 2rem 5rem 2rem;
 }
 
-.article_wrapper p {
-  margin: 0.5rem;
-}
+/* .article_wrapper p {
+  margin: 0.5rem 0 0.5rem 0;
+} */
 
 .math {
   padding: 0 0.5rem 0 0.5rem;
@@ -44,6 +44,9 @@
 }
 
 .section_container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   width: 100%;
   padding: 2rem 3rem 3rem 3rem;
   background-color: var(--color-midnight-blue-darker);
@@ -54,17 +57,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
   width: 100%;
+  gap: 1rem;
 }
 
 .section_row {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   gap: 4rem;
+}
+
+.text_align_left {
+  text-align: left;
+}
+
+.display_none {
+  display: none;
 }
 
 .abc123 {
