--- a/src/app/pipeline/pipeline.module.css
+++ b/src/app/pipeline/pipeline.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2rem;
 }
 
 .wrapper {
@@ -28,11 +29,32 @@
 }
 
 .progress_container {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   padding: 2rem 3rem 3rem 3rem;
   background-color: var(--color-light-blue-dimmed);
   font-size: 0.7rem;
   border-radius: 0.3rem;
+}
+
+.colored_bottom_blue {
+  width: 100%;
+  height: 0.5rem;
+  background-color: #36b3ff;
+  border-radius: 0 0 0.3rem 0.3rem;
+  transform: translateY(-0.5rem);
+}
+
+.colored_bottom_turquoise {
+  width: 100%;
+  height: 0.5rem;
+  background-color: #4be297;
+  border-radius: 0 0 0.3rem 0.3rem;
+  transform: translateY(-0.5rem);
+}
+.colored_bottom_green {
+  width: 100%;
+  height: 0.5rem;
+  background-color: #7ecc40;
+  border-radius: 0 0 0.3rem 0.3rem;
+  transform: translateY(-0.5rem);
 }
